@@ -17,3 +17,4 @@
 ( cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/poppler_viewer.c;  ) > 0.2.0cvs11.patchset
 ( cvs diff -u -r 1.1.2.11 -r 1.1.2.12 src/poppler_viewer.c;  ) > 0.2.0cvs12.patchset
 ( cvs diff -u -r 1.1.2.12 -r 1.1.2.13 src/poppler_viewer.c;  ) > 0.2.0cvs13.patchset
+( cvs diff -u -r 1.1.2.13 -r 1.1.2.14 src/poppler_viewer.c;  ) > 0.2.0cvs14.patchset
